# ComputerVision

./: CV_framework_specification.reqif
computer_vision_framework/: CMakeLists.txt
computer_vision_framework/Application/: CMakeLists.txt
computer_vision_framework/Application/src/: cvApplication.cpp
computer_vision_framework/ArucoGenerator/: CMakeLists.txt
computer_vision_framework/ComputerVision/: CMakeLists.txt  modes_without_mqtt.json  new_input.json
computer_vision_framework/ComputerVision/include/: ArucoImageProcessor.h  Camera.h  ComputerVision.h  ComputerVisionObjectPositions.pb.h  CoordinateTransformer.h  DataSenderFactory.h  DataTypes.h  DccOperationsCommand.pb.h  FrameProviderFactory.h  ImageProcessorFactory.h  MQTTDataSender.h  MessageSerializer.h  ModesPostProcessor.h  NetworkCamera.h  ObjectDataCollector.h  PostProcessor.h  PostProcessorFactory.h  SegmentCommand.pb.h  SegmentOccupancy.pb.h  SegmentState.pb.h  SendAllStatus.pb.h  SimpleVisualizer.h  TrainCurrentSegment.pb.h  TrainCurrentSpeed.pb.h  TrainFunctionCommand.pb.h  TrainFunctionState.pb.h  TrainReferenceSpeedCommand.pb.h  TurnoutReferenceCommand.pb.h  VisualizerFactory.h  YakinduCannotGoTo.pb.h  YakinduReserveTo.pb.h  cvdata.pb.h  logger.h
computer_vision_framework/ComputerVision/include/core/: ComputerVision.h
computer_vision_framework/ComputerVision/include/core/data/: DataTypes.h
computer_vision_framework/ComputerVision/include/core/data/proto/: .SendAllStatus.pb.h.swp  DccOperationsState.pb.h  Enums.pb.h  Message.pb.h  TrainReferenceSpeed.pb.h  TurnoutCommand.pb.h  TurnoutReferenceState.pb.h  TurnoutState.pb.h  YakinduCanGoTo.pb.h  YakinduReleaseTo.pb.h  complex_gestures.pb.h  desktop.ini
computer_vision_framework/ComputerVision/include/core/graph/: ObjectDataCollector.h
computer_vision_framework/ComputerVision/include/factory/: DataSenderFactory.h  FrameProviderFactory.h  ImageProcessorFactory.h  PostProcessorFactory.h  VisualizerFactory.h
computer_vision_framework/ComputerVision/include/modules/datasender/: DataSender.h  MQTTDataSender.h  ZeroMQDataSender.h
computer_vision_framework/ComputerVision/include/modules/imageprocessor/: ArucoImageProcessor.h  CircleDetector.h  IRTDImageProcessor.h  LedController.h
computer_vision_framework/ComputerVision/include/modules/postprocessor/: PostProcessor.h
computer_vision_framework/ComputerVision/include/modules/visualizer/: SimpleVisualizer.h
computer_vision_framework/ComputerVision/proto/: cvdata.proto
computer_vision_framework/ComputerVision/src/: ArucoImageProcessor.cpp  Camera.cpp  ComputerVision.cpp  ComputerVisionObjectPositions.pb.cc  CoordinateTransformer.cpp  DccOperationsCommand.pb.cc  IRTDImageProcessor.cpp  MQTTDataSender.cpp  Message.pb.cc  MessageSerializer.cpp  ModesPostProcessor.cpp  NetworkCamera.cpp  Object.cpp  ObjectDataCollector.cpp  SegmentState.pb.cc  SendAllStatus.pb.cc  SimpleVisualizer.cpp  TrainCurrentSpeed.pb.cc  TrainReferenceSpeedCommand.pb.cc  TurnoutReferenceCommand.pb.cc  TurnoutReferenceState.pb.cc  VideoSource.cpp  YakinduCanGoTo.pb.cc  ZeroMQDataSender.cpp  cvdata.pb.cc
computer_vision_framework/ComputerVision/src/core/: ComputerVision.cpp
computer_vision_framework/ComputerVision/src/core/data/proto/: DccOperationsState.pb.cc  Enums.pb.cc  SegmentCommand.pb.cc  SegmentOccupancy.pb.cc  TrainCurrentSegment.pb.cc  TrainFunctionCommand.pb.cc  TrainFunctionState.pb.cc  TrainReferenceSpeed.pb.cc  TurnoutCommand.pb.cc  TurnoutState.pb.cc  YakinduCannotGoTo.pb.cc  YakinduReleaseTo.pb.cc  YakinduReserveTo.pb.cc  complex_gestures.pb.cc
computer_vision_framework/ComputerVision/src/modules/datasender/: MQTTDataSender.cpp  ZeroMQDataSender.cpp
computer_vision_framework/ComputerVision/src/modules/frameprovider/: Camera.cpp
computer_vision_framework/ComputerVision/src/modules/imageprocessor/: ArucoImageProcessor.cpp  CircleDetector.cpp  IRTDImageProcessor.cpp  LedController.cpp
computer_vision_framework/ComputerVision/src/modules/imageprocessor/util/: Pattern.cpp  SerialComm.cpp
computer_vision_framework/ComputerVision/src/modules/postprocessor/: CoordinateTransformer.cpp  ModesPostProcessor.cpp
computer_vision_framework/ComputerVision/src/modules/visualizer/: SimpleVisualizer.cpp
computer_vision_framework/MonoCalibrate/: CMakeLists.txt
